# LangGraph-Agent-Builder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  hatch_build.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/graphforge/: __init__.py  __main__.py  cli.py  settings.py
backend/src/graphforge/a2a/: __init__.py  card.py  executor.py  server.py
backend/src/graphforge/api/: __init__.py  app.py  collections.py  components.py  debug.py  deps.py  flows.py
backend/src/graphforge/compiler/: __init__.py  build.py  spec.py
backend/src/graphforge/components/: __init__.py  base.py  registry.py  templating.py
backend/src/graphforge/components/builtin/: __init__.py  human.py  llm_agent.py  llm_call.py  llm_router.py  mcp_toolset.py  pgvector_retriever.py  set_data.py  testing.py
backend/src/graphforge/components/user/: __init__.py
backend/src/graphforge/db/: __init__.py  engine.py  models.py
backend/src/graphforge/mcp_server/: __init__.py  server.py
backend/src/graphforge/rag/: __init__.py  ingest.py
backend/src/graphforge/runtime/: __init__.py  events.py  manager.py  runs.py  state.py
backend/src/langgraph_agent_builder/: __init__.py  app.py  auth.py  cli.py  errors.py  node_types.py  py.typed  serialization.py
backend/src/langgraph_agent_builder/a2a/: card.py  executor.py  handler.py  mount.py  push.py  tasks.py
backend/src/langgraph_agent_builder/api/: __init__.py  catalog.py  components.py  config.py  deps.py  flows.py  resources.py  runs.py  settings_api.py  templates.py  vectorstores.py  webhook.py
backend/src/langgraph_agent_builder/cli/: _common.py  apikey.py  component.py  flow.py  init.py  main.py  run.py
backend/src/langgraph_agent_builder/compiler/: __init__.py  emit.py  export_python.py  ir.py  parse.py  plan.py  resolve.py  subgraph.py  validate.py  wire.py
backend/src/langgraph_agent_builder/components/data/: batch.py  converters.py  helpers.py
backend/src/langgraph_agent_builder/db/: migrate.py  models.py
backend/src/langgraph_agent_builder/mcp/: server.py
backend/src/langgraph_agent_builder/runtime/: __init__.py  checkpoint.py  executor.py  streams.py  tools.py
backend/src/langgraph_agent_builder/schema/: __init__.py  diagnostics.py  events.py  flowspec.py  scrub.py
backend/src/langgraph_agent_builder/sdk/: __init__.py  component.py  dynamic.py  expressions.py  fields.py  outputs.py  registry.py  runtime.py  templating.py  testing.py
backend/src/langgraph_agent_builder/services/: __init__.py  apikeys.py  bootstrap.py  db.py  errors.py  files.py  flows.py  locator.py  mcp_client.py  mcp_servers.py  orchestrator.py  resources.py  runs.py  runtime.py  secrets.py  settings.py  templates.py  vectorstores.py
backend/src/langgraph_agent_builder/vectorstores/: __init__.py  base.py  chroma.py  local.py  pgvector.py  qdrant.py  weaviate.py
backend/src/lga/: __init__.py  app.py  errors.py
backend/src/lga/_static/: index.html
backend/src/lga/a2a/: __init__.py  card.py  executor.py  handler.py  mount.py  push.py  scope.py  tasks.py
backend/src/lga/api/: components.py  deps.py  flows.py  runs.py  settings_api.py  templates.py  vectorstores.py  webhook.py
backend/src/lga/cli/: _common.py  apikey.py  component.py  flow.py  init.py  main.py  run.py
backend/src/lga/compiler/: __init__.py  emit.py  export_python.py  ir.py  resolve.py  subgraph.py  validate.py  wire.py
backend/src/lga/components/: __init__.py
backend/src/lga/db/: models.py
backend/src/lga/mcp/: __init__.py  server.py
backend/src/lga/runtime/: checkpoint.py  executor.py  streams.py
backend/src/lga/schema/: __init__.py  diagnostics.py  events.py  flowspec.py  scrub.py  state.py
backend/src/lga/sdk/: component.py  dynamic.py  fields.py  interrupts.py  outputs.py  registry.py  runtime.py  testing.py
backend/src/lga/services/: apikeys.py  bootstrap.py  db.py  errors.py  files.py  flows.py  mcp_servers.py  orchestrator.py  runs.py  secrets.py  settings.py  vectorstores.py
backend/src/lga/vectorstores/: __init__.py  base.py  chroma.py  local.py  pgvector.py  qdrant.py  weaviate.py
backend/tests/: conftest.py  test_api_runs_contract.py  test_auth.py  test_batch.py  test_cli.py  test_compiler.py  test_compiler_build.py  test_contract_schema.py  test_demo_flow.py  test_executor.py  test_executor_a2a.py  test_export_python.py  test_fields.py  test_flows_api.py  test_golden_validation.py  test_import_export.py  test_langflow_parity.py  test_mcp.py  test_mcp_server.py  test_node_types.py  test_pluggable.py  test_ports.py  test_publish_playground.py  test_registry.py  test_resources_api.py  test_roundtrip_examples.py  test_runs_api.py  test_scrub.py  test_serialization.py  test_services.py  test_slim_core.py  test_spec_validation.py  test_v2.py  test_validate_api.py
backend/tests/a2a/: test_bridge_unit.py  test_compliance.py
backend/tests/contract/: __init__.py  test_vectorstore_contract.py
backend/tests/integration/: __init__.py  test_vectorstore_live.py
backend/tests/unit/: __init__.py  conftest.py  test_a2a_push_mount.py  test_a2a_tasks.py  test_api_components.py  test_api_deps.py  test_api_flows.py  test_api_resources.py  test_api_runs.py  test_api_settings.py  test_api_templates.py  test_api_vectorstores.py  test_api_webhook.py  test_apikeys_service.py  test_basic_tools.py  test_checkpointer_race.py  test_cli_common.py  test_cli_flow.py  test_coerce.py  test_compiler_ir.py  test_compiler_parse.py  test_compiler_resolve.py  test_compiler_subgraph.py  test_compiler_validate.py  test_compiler_wire.py  test_component_config_schema.py  test_data_batch.py  test_data_converters.py  test_data_helpers.py  test_db_migrate.py  test_expressions.py  test_files_service.py  test_files_streaming.py  test_flow_as_tool.py  test_flow_control.py  test_interrupts.py  test_io_components.py  test_language_model.py  test_llm_agent.py  test_llm_call.py  (+37 more)
examples/09_custom_component/pkg/: pyproject.toml
(+225 files in other folders)
