[project]
name = "lga"
version = "0.1.0"
description = "LangGraph-native visual agent builder: flows compiled to StateGraphs, served as A2A agents and MCP tools."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.18",
    "httpx>=0.27",
    # orchestration
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    # protocols — a2a-sdk pinned to the 0.3 line: SPEC §7 targets protocol v0.3.x;
    # a2a-sdk 1.x is a rewritten server API (protocol v1.0) and a deliberate migration.
    "a2a-sdk[http-server]>=0.3,<0.4",
    "mcp>=1.9",
    "langchain-mcp-adapters>=0.1",
    # persistence
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "alembic>=1.13",
    # config / cli
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    # misc
    "python-ulid>=2.7",
    "jsonschema>=4.21",
    "jinja2>=3.1",
    "jsonpath-ng>=1.6",
    "cryptography>=42.0",
    "watchfiles>=0.24",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
ollama = ["langchain-ollama>=0.2"]
postgres = [
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "langgraph-checkpoint-postgres>=2.0",
]
pgvector = [
    "lga[postgres]",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3",
    "pypdf>=5.0",
]
all = ["lga[openai,anthropic,ollama,postgres,pgvector]"]

[project.scripts]
lga = "lga.cli.main:app"

[project.entry-points."lga.components"]
builtin = "lga.components"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "import-linter>=2.0",
    # extras material for the dev/test matrix (both storage tiers, providers)
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3",
    "pypdf>=5.0",
    "langchain-openai>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lga"]
artifacts = ["src/lga/_static/**"]

[tool.hatch.build.targets.sdist]
include = ["src/lga", "hatch_build.py", "README.md"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/graphforge", "src/lga/_static"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Component metadata are ClassVars declared on Component; overriding them in
# subclasses without re-annotating is the component-DSL convention.
"src/lga/components/**" = ["RUF012"]
"src/lga/sdk/**" = ["RUF012"]
"tests/**" = ["RUF012"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pydantic.PydanticDeprecatedSince20",
]

[tool.importlinter]
root_package = "lga"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "sdk stays lightweight (no fastapi/db imports)"
type = "forbidden"
source_modules = ["lga.sdk"]
forbidden_modules = ["fastapi", "lga.services.db", "lga.api", "sqlalchemy", "alembic"]
