[project]
name = "langgraph-agent-builder"
version = "0.0.1"
description = "LangGraph-native visual agent builder: flows compiled to StateGraphs, served as A2A agents and MCP tools."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.18",
    "httpx>=0.27",
    # orchestration
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    # protocols — a2a-sdk pinned to the 0.3 line: SPEC §7 targets protocol v0.3.x;
    # a2a-sdk 1.x is a rewritten server API (protocol v1.0) and a deliberate migration.
    "a2a-sdk[http-server]>=0.3,<0.4",
    "mcp>=1.9",
    "langchain-mcp-adapters>=0.1",
    # persistence
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "alembic>=1.13",
    # config / cli
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    # misc
    "python-ulid>=2.7",
    "jsonschema>=4.21",
    "jinja2>=3.1",
    "jsonpath-ng>=1.6",
    "cryptography>=42.0",
    "watchfiles>=0.24",
    # local vector store — pure wheel, no server (SPEC §8b.2)
    "sqlite-vec>=0.1.3",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
ollama = ["langchain-ollama>=0.2"]
postgres = [
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "langgraph-checkpoint-postgres>=2.0",
]
pgvector = [
    "langgraph-agent-builder[postgres]",
    "pgvector>=0.3",
    "pypdf>=5.0",
]
qdrant = ["qdrant-client>=1.12"]
weaviate = ["weaviate-client>=4.9"]
chroma = ["chromadb>=0.5"]
all = ["langgraph-agent-builder[openai,anthropic,ollama,postgres,pgvector,qdrant,weaviate,chroma]"]

[project.scripts]
lga = "lga.cli.main:app"

[project.entry-points."lga.components"]
builtin = "lga.components"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "import-linter>=2.0",
    # extras material for the dev/test matrix (both storage tiers, providers)
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3",
    "pypdf>=5.0",
    "langchain-openai>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lga"]
artifacts = ["src/lga/_static/**"]

[tool.hatch.build.targets.sdist]
include = ["src/lga", "hatch_build.py", "README.md"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/graphforge", "src/lga/_static"]

[tool.ruff.lint]
# REFACTOR.md §8: E,F,I (basics+imports), UP (pyupgrade), B (bugbear),
# ANN (annotations), ASYNC, PT (pytest-style), plus W/RUF hygiene.
select = ["E", "F", "W", "I", "UP", "B", "ANN", "ASYNC", "PT", "RUF"]
ignore = [
    "RUF001", "RUF002", "RUF003",
    "ANN401",  # allow `Any` where deliberately used (each site carries a why)
]

[tool.ruff.lint.per-file-ignores]
# Component metadata are ClassVars declared on Component; overriding them in
# subclasses without re-annotating is the component-DSL convention.
"src/lga/components/**" = ["RUF012"]
"src/lga/sdk/**" = ["RUF012"]
"tests/**" = ["RUF012"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# REFACTOR.md §4 tiers: unit/ (no net/DB, ms), contract/ (adapter ⇄ port
# protocol), integration/ (real DB/MCP/A2A, opt-in via the marker + CI job).
markers = [
    "integration: exercises a real server/DB/network (vendor vector backends, live MCP/A2A); opt-in, separate CI job",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pydantic.PydanticDeprecatedSince20",
]

[tool.importlinter]
root_package = "lga"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "sdk stays lightweight (no fastapi/db imports)"
type = "forbidden"
source_modules = ["lga.sdk"]
forbidden_modules = ["fastapi", "lga.services.db", "lga.api", "sqlalchemy", "alembic"]

# SPEC §8b.2 / §15.6: `import lga` must not import a vendor vector client — the
# slim-core promise. The five backends live behind the VectorStoreProvider
# protocol and import their client lazily *inside methods*; only those specific
# adapter modules may reference the vendor package. Any other lga module reaching
# for a vector client (or an eager top-level import that would load one at
# `import lga`) fails this contract. A runtime backstop asserting the clients are
# absent from `sys.modules` after `import lga` lives in tests/test_slim_core.py.
[[tool.importlinter.contracts]]
name = "core stays vector-vendor-free (importing lga must not import a vector client)"
type = "forbidden"
source_modules = ["lga"]
forbidden_modules = ["qdrant_client", "weaviate", "chromadb", "pgvector"]
ignore_imports = [
    "lga.vectorstores.qdrant -> qdrant_client",
    "lga.vectorstores.weaviate -> weaviate",
    "lga.vectorstores.chroma -> chromadb",
]

# --------------------------------------------------------------------------- mypy
# REFACTOR.md §2/§8: strict type-checker as a hard gate. Pydantic plugin so
# BaseModel field types are understood. Untyped third-party SDKs (a2a, mcp,
# langgraph, vector clients) have no stubs → their imports are ignored, but our
# own code stays under full strict rules.
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
# tests exercise fakes and partial states; keep them typed but not strict-blocking
# on decorator/return inference from pytest/pytest-asyncio.
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "a2a.*",
    "mcp.*",
    "langgraph.*",
    "langgraph_checkpoint.*",
    "langchain_mcp_adapters.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_ollama.*",
    "langchain_postgres.*",
    "langchain_text_splitters.*",
    "sqlite_vec.*",
    "jsonpath_ng.*",
    "pgvector.*",
    "qdrant_client.*",
    "weaviate.*",
    "chromadb.*",
    "sse_starlette.*",
    "pypdf.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- coverage
# REFACTOR.md §4: ≥85 % on core logic. Branch coverage so untested routing /
# error paths (the ones that matter) show up. `--cov` is opt-in; CI passes it.
[tool.coverage.run]
source = ["lga"]
branch = true
omit = [
    "*/lga/db/migrations/*",
    "*/lga/_static/*",
    # Vendor vector backends are integration-tier adapters (SPEC §8b: "backends
    # as extras, lazy import"). They require an uninstalled vendor client AND a
    # live server, so they are exercised by the integration tier (extras + real
    # servers, separate CI job), NOT the unit gate. The `local` (sqlite-vec)
    # backend ships in core and IS unit-covered here.
    "*/lga/vectorstores/chroma.py",
    "*/lga/vectorstores/pgvector.py",
    "*/lga/vectorstores/weaviate.py",
    "*/lga/vectorstores/qdrant.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
