[project]
name = "langgraph-agent-builder"
version = "0.1.0"
description = "Design-time low-code flow builder for the agentplane platform: edit, validate, publish FlowDefinitions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    # platform contract — pinned deliberately (CLAUDE.md invariant 7); upgrades
    # are their own PR gated by the contract tests (and refresh
    # schemas/flow-definition.schema.json alongside the pin).
    "agentplane-core>=0.0.3,<0.1.0",
    "agentplane-sdk>=0.0.3,<0.1.0",
    # persistence (builder-local drafts only)
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    # config / auth / cli
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyjwt[crypto]>=2.9",
    "typer>=0.12",
    # canonical YAML import/export
    "pyyaml>=6.0",
]

[project.scripts]
lab = "langgraph_agent_builder.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "import-linter>=2.0",
    "respx>=0.22",
    "jsonschema>=4.23",
    "types-jsonschema>=4.23",
    "types-pyyaml>=6.0",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_agent_builder"]
artifacts = ["src/langgraph_agent_builder/_static/**"]

[tool.hatch.build.targets.sdist]
include = ["src/langgraph_agent_builder", "hatch_build.py", "README.md"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/langgraph_agent_builder/_static"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ANN", "ASYNC", "PT", "RUF"]
ignore = [
    "RUF001", "RUF002", "RUF003",
    "ANN401",  # allow `Any` where deliberately used (each site carries a why)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Design-time only (CLAUDE.md invariant 1): the builder never imports
# execution frameworks or protocol servers — those live in agentplane-runtime.
[tool.importlinter]
root_package = "langgraph_agent_builder"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "design-time only: no execution/protocol frameworks"
type = "forbidden"
source_modules = ["langgraph_agent_builder"]
forbidden_modules = [
    "langgraph",
    "langchain_core",
    "a2a",
    "mcp",
    "fastmcp",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "a2a.*",
    "google.protobuf.*",  # protobuf runtime ships no stubs
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["langgraph_agent_builder"]
branch = true
omit = ["*/langgraph_agent_builder/_static/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
