[project]
name = "lga-ticket-triage"
version = "0.1.0"
description = "Example custom lga component package with a custom port schema."
requires-python = ">=3.12"
dependencies = ["lga"]

[project.entry-points."lga.components"]
ticket_triage = "lga_ticket_triage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lga_ticket_triage"]
