[project]
name = "lga-ticket-triage"
version = "0.1.0"
description = "Example custom lga component package with a custom port schema."
requires-python = ">=3.12"
dependencies = ["langgraph-agent-builder"]

[project.entry-points."lga.components"]
ticket_triage = "lga_ticket_triage"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lga_ticket_triage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
