[project]
name = "lab-ticket-triage"
version = "0.1.0"
description = "Example custom lab component package with a custom port schema."
requires-python = ">=3.12"
dependencies = ["langgraph-agent-builder"]

[project.entry-points."langgraph_agent_builder.components"]
ticket_triage = "lab_ticket_triage"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_ticket_triage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
